force-app/main/default/objects/Lead/fields/EvergageLastActivity__c.field-meta.xml
<CustomField>
    <fullName>EvergageLastActivity__c</fullName>
    <description>Last activity with application</description>
    <label>Evergage Last Visit</label>
    <type>DateTime</type>
</CustomField>