force-app/main/default/objects/Lead/fields/EvergageSegment_jHlwm__c.field-meta.xml
<CustomField>
    <fullName>EvergageSegment_jHlwm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a member of segment &apos;[SEG] - RAMO DE ATUACAO&apos;</description>
    <label>Evergage In Segment &apos;[SEG] - RAMO DE AT&apos;</label>
    <type>Checkbox</type>
</CustomField>