force-app/main/default/objects/Lead/fields/import_id__c.field-meta.xml
<CustomField>
    <fullName>import_id__c</fullName>
    <description>Field that helps identify different import files</description>
    <label>Import ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>