force-app/main/default/objects/Lead/fields/lead_utm_content__c.field-meta.xml
<CustomField>
    <fullName>lead_utm_content__c</fullName>
    <description>UTM Content field that Identifies the content zone, such as a call-to-action message.</description>
    <label>UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>