force-app/main/default/objects/Lead/fields/lead_utm_medium__c.field-meta.xml
<CustomField>
    <fullName>lead_utm_medium__c</fullName>
    <description>UTM Medium field that Identifies the medium, such as a search engine, a social media platform, or another platform.</description>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>