force-app/main/default/objects/Lead/fields/lead_utm_source__c.field-meta.xml
<CustomField>
    <fullName>lead_utm_source__c</fullName>
    <description>UTM Source that Identifies the source of the traffic, such as Google, Websites, Banner Ads, or AdWords.  (This can be different than Lead Source)</description>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>