force-app/main/default/objects/Lead/fields/lead_utm_term__c.field-meta.xml
<CustomField>
    <fullName>lead_utm_term__c</fullName>
    <description>UTM Term field that Identifies keywords that generate clicks.</description>
    <label>UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>