force-app/main/default/objects/Lead/fields/PMC_DH_DealOwner__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_DealOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>