force-app/main/default/objects/Lead/fields/PMC_DH_FarmSize__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_FarmSize__c</fullName>
    <label>Farm Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>