force-app/main/default/objects/Lead/fields/PMC_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>PMC_Event_Name__c</fullName>
    <label>Event Name</label>
    <type>TextArea</type>
</CustomField>