force-app/main/default/objects/Lead/fields/PMC_scheduled__c.field-meta.xml
<CustomField>
    <fullName>PMC_scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled with Mosaic Expert?</label>
    <type>Checkbox</type>
</CustomField>