force-app/main/default/objects/Lead/fields/PMC_Scheduled_DateTime__c.field-meta.xml
<CustomField>
    <fullName>PMC_Scheduled_DateTime__c</fullName>
    <label>Scheduled DateTime</label>
    <type>DateTime</type>
</CustomField>