force-app/main/default/objects/Lead/fields/PMC_SS_AcceptedByRetailer__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AcceptedByRetailer__c</fullName>
    <description>Specifies whether the Lead is Accepted by Retailer or not</description>
    <label>Accepted By Retailer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>