force-app/main/default/objects/Lead/fields/PMC_SS_AnticipatedNeedByDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AnticipatedNeedByDate__c</fullName>
    <description>Date in which Lead is looking to procure product(s)</description>
    <label>Anticipated Need By Date</label>
    <type>Date</type>
</CustomField>