force-app/main/default/objects/Lead/fields/PMC_SS_Application__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Application__c</fullName>
    <label>Application Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>In-furrow</fullName>
            </value>
            <value>
                <fullName>Pre-plant</fullName>
            </value>
            <value>
                <fullName>Sidedress</fullName>
            </value>
            <value>
                <fullName>Tank-mix</fullName>
            </value>
            <value>
                <fullName>Topdress</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>