force-app/main/default/objects/Lead/fields/PMC_SS_Application_Timing__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Application_Timing__c</fullName>
    <label>Application Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Spring pre-plant</fullName>
            </value>
            <value>
                <fullName>Spring at-plant</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>