force-app/main/default/objects/Lead/fields/PMC_SS_CommunicationPreference__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CommunicationPreference__c</fullName>
    <description>What is this Lead&apos;s preferred method of communication?</description>
    <label>Communication Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>