force-app/main/default/objects/Lead/fields/PMC_SS_ConversionReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ConversionReason__c</fullName>
    <description>Reasons for converting Lead</description>
    <label>Conversion Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Budget Sufficient</fullName>
            </value>
            <value>
                <fullName>Decision Authority</fullName>
            </value>
            <value>
                <fullName>Industry Fit</fullName>
            </value>
            <value>
                <fullName>Timing Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>