force-app/main/default/objects/Lead/fields/PMC_SS_EmailValid__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_EmailValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Valid</label>
    <type>Checkbox</type>
</CustomField>