force-app/main/default/objects/Lead/fields/PMC_SS_IsDuplicate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IsDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether this Lead is duplicate or not</description>
    <label>Is Duplicate</label>
    <type>Checkbox</type>
</CustomField>