force-app/main/default/objects/Lead/fields/PMC_SS_LatestProductInterests__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LatestProductInterests__c</fullName>
    <description>This field is used to capture latest product interest of Lead.</description>
    <label>Latest Product Interests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>