force-app/main/default/objects/Lead/fields/PMC_SS_LeadType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LeadType__c</fullName>
    <description>Specifies the Lead Type</description>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type</valueSetName>
    </valueSet>
</CustomField>