force-app/main/default/objects/Lead/fields/PMC_SS_OwnerFullName__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OwnerFullName__c</fullName>
    <description>Owner full name</description>
    <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>