force-app/main/default/objects/Lead/fields/PMC_SS_ProductFamilyCategoryInterests__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductFamilyCategoryInterests__c</fullName>
    <description>States the Product Category</description>
    <label>Product Family Category Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_SS_ProductFamilies</valueSetName>
    </valueSet>
</CustomField>