force-app/main/default/objects/Lead/fields/PMC_SS_ProductInterestVolumeEstimate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductInterestVolumeEstimate__c</fullName>
    <description>Estimated volume of what a Lead is interested in</description>
    <label>Product Interest Volume Estimate</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>