force-app/main/default/objects/Lead/fields/PMC_SS_RegionalManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RegionalManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>States the Regional Manager</description>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>