force-app/main/default/objects/Lead/fields/PMC_SS_RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RejectionReason__c</fullName>
    <description>Reason Lead was Rejected</description>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Budget Insufficient</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Inaccurate Information</fullName>
            </value>
            <value>
                <fullName>Outside of Geographic Coverage</fullName>
            </value>
            <value>
                <fullName>Restricted Business</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Unfit Customer Profile</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>