force-app/main/default/objects/Lead/fields/PMC_SS_RetailerEmailSentDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RetailerEmailSentDate__c</fullName>
    <description>This field will be populated when Email will be sent to Retailer</description>
    <label>Retailer Email Sent Date</label>
    <type>Date</type>
</CustomField>