force-app/main/default/objects/Lead/fields/PMC_SS_RetailerName__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RetailerName__c</fullName>
    <description>Specifies the Retailer Name</description>
    <label>Retailer Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>