force-app/main/default/objects/Lead/fields/PMC_SS_SMSOptOut__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SMSOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies the SMS Opt out preference of the Lead</description>
    <label>Marketing SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>