force-app/main/default/objects/Lead/fields/PMC_SS_Tillage__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Tillage__c</fullName>
    <label>Tillage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>No-till</fullName>
            </value>
            <value>
                <fullName>Reduced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>