force-app/main/default/objects/Lead/fields/PMC_SS_WhatsappOptOut__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_WhatsappOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies the Whatsapp Opt out preference of the lead</description>
    <label>Marketing Whatsapp Opt Out</label>
    <type>Checkbox</type>
</CustomField>