force-app/main/default/objects/Lead/fields/Seniority_Level__c.field-meta.xml
<CustomField>
    <fullName>Seniority_Level__c</fullName>
    <label>Seniority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>CEO/Owner/Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>