force-app/main/default/objects/Lead/recordTypes/PMC_SS_Lead.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_Lead</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <description>Default Lead Record Type</description>
    <label>Lead</label>
</RecordType>