force-app/main/default/objects/Lead/validationRules/PMC_SS_PreventStatusChangetoConverted.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_PreventStatusChangetoConverted</fullName>
    <active>false</active>
    <description>This validation rule does not allow a user with Marketing user profile to change Lead status to converted.</description>
    <errorConditionFormula>AND(
 NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c) ,
 $Profile.Name = &apos;PMC Marketing User&apos; ,   
      ISCHANGED( Status ) , 
      ISPICKVAL( Status , &apos;Converted&apos;) 
)</errorConditionFormula>
    <errorMessage>Marketing Users are not able to convert Leads</errorMessage>
</ValidationRule>