force-app/main/default/objects/Lead/validationRules/PMC_SS_ReqFieldsToChangeStatusSAL_FName.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ReqFieldsToChangeStatusSAL_FName</fullName>
    <active>true</active>
    <description>FirstName Field value should be entered in order to convert Lead Status to SAL</description>
    <errorConditionFormula>AND (
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
(
IF(ISBLANK( FirstName), 0, 1) 

)&lt;1,
OR(ISCHANGED(Status),ISNEW()),
ISPICKVAL(Status,&apos;SAL&apos;)
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please fill out First Name field value.</errorMessage>
</ValidationRule>