force-app/main/default/objects/Lead/validationRules/PMC_SS_ReqFieldsToChangeStatusSAL_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ReqFieldsToChangeStatusSAL_Phone</fullName>
    <active>true</active>
    <description>Phone Field value should be entered in order to convert Lead Status to SAL</description>
    <errorConditionFormula>AND (
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
(
IF(ISBLANK(Phone), 0, 1) 

)&lt;1,
OR(ISCHANGED(Status),ISNEW()),
ISPICKVAL(Status,&apos;SAL&apos;)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please fill out Phone field value.</errorMessage>
</ValidationRule>