force-app/main/default/objects/Lead/validationRules/PMC_SS_ReqFieldsToChangeStatusSAL_Postal.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ReqFieldsToChangeStatusSAL_Postal</fullName>
    <active>true</active>
    <description>Postal Code Field value should be entered in order to convert Lead Status to SAL</description>
    <errorConditionFormula>AND (
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
(
IF(ISBLANK(PostalCode), 0, 1) 

)&lt;1,
OR(ISCHANGED(Status),ISNEW()),
ISPICKVAL(Status,&apos;SAL&apos;)
)</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Please fill out Zip/Postal field value.</errorMessage>
</ValidationRule>