force-app/main/default/objects/Lead/listViews/PMC_SS_GlobalNewLeads_Lead.listView-meta.xml
<ListView>
    <fullName>PMC_SS_GlobalNewLeads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Global New Leads</label>
    <queue>PMC_SS_GlobalNewLeads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>