force-app/main/default/objects/Lead/listViews/PMC_SS_GTMBrazilLeads_Lead.listView-meta.xml
<ListView>
    <fullName>PMC_SS_GTMBrazilLeads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>GTM Brazil Leads</label>
    <queue>PMC_SS_GTMBrazilLeads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>