force-app/main/default/objects/Lead/listViews/PMC_SS_GTMNALeads_Lead.listView-meta.xml
<ListView>
    <fullName>PMC_SS_GTMNALeads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>GTM NA Leads</label>
    <queue>PMC_SS_GTMNALeads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>