force-app/main/default/objects/Lead/listViews/PMC_SS_IndiaNewLeads_Lead.listView-meta.xml
<ListView>
    <fullName>PMC_SS_IndiaNewLeads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>India New Leads</label>
    <queue>PMC_SS_IndiaNewLeads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>