force-app/main/default/objects/Lead/listViews/PMC_SS_NANewLeads_Lead.listView-meta.xml
<ListView>
    <fullName>PMC_SS_NANewLeads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>NA New Leads</label>
    <queue>PMC_SS_NANewLeads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>