force-app/main/default/objects/Lead/listViews/PMC_SS_NewLeads_Lead.listView-meta.xml
<ListView>
    <fullName>PMC_SS_NewLeads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>New Leads</label>
    <queue>PMC_SS_NewLeads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>