force-app/main/default/objects/Lead/listViews/PMC_SS_SANewLeads_Lead.listView-meta.xml
<ListView>
    <fullName>PMC_SS_SANewLeads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>SA New Leads</label>
    <queue>PMC_SS_SANewLeads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>