force-app/main/default/objects/Lead/listViews/SA_MQL_Leads.listView-meta.xml
<ListView>
    <fullName>SA_MQL_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>MQL</value>
    </filters>
    <label>SA MQL Leads</label>
    <queue>PMC_SS_SANewLeads</queue>
    <sharedTo>
        <role>PMC_SA_B2CSalesTeam</role>
    </sharedTo>
</ListView>